[build-system]
requires = ['setuptools==68.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'locklib'
version = '0.0.17'
authors = [
  { name='Evgeniy Blinov', email='zheni-b@yandex.ru' },
]
description = 'When there are not enough locks from the standard library'
readme = 'README.md'
requires-python = '>=3.8'
classifiers = [
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'License :: OSI Approved :: MIT License',
  'Topic :: Software Development :: Libraries',
  'Intended Audience :: Developers',
  'Typing :: Typed',
]
keywords = [
    'locks',
    'mutexes',
    'threading',
    'protocols'
]

[tool.setuptools.package-data]
"locklib" = ["py.typed"]

[tool.mutmut]
paths_to_mutate="locklib"
runner="pytest"

[project.urls]
'Source' = 'https://github.com/pomponchik/locklib'
'Tracker' = 'https://github.com/pomponchik/locklib/issues'
